--- a/index.html
+++ b/index.html
@@ -3,10 +3,123 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Virtual Battlefield</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is a static website hosted on GitHub Pages!</p>
+    <header>
+        <div class="container">
+            <h1>Virtual Battlefield</h1>
+            <nav>
+                <a href="#home">Home</a>
+                <a href="#training">Training Mode</a>
+                <a href="#multiplayer">Multiplayer Features</a>
+                <a href="#support">Support</a>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Home Section -->
+    <section id="home" class="section">
+        <h2>Welcome to Virtual Battlefield</h2>
+        <p>Experience the thrill of an immersive multiplayer VR shooting game. Designed to engage and entertain, Virtual Battlefield is the future of VR gaming.</p>
+        <div class="image-container">
+            <!-- Chú thích: Đây là hình tổng quan về game, lấy từ nội dung trong chương 4 -->
+            <img src="images/square3-fotor-2024120274831.png" alt="Game Overview">
+        </div>
+    </section>
+
+    <!-- Training Mode Section -->
+    <section id="training" class="section">
+        <h2>Training Mode</h2>
+        <p>The training mode helps players master the game mechanics, weapons, and combat strategies in a controlled environment.</p>
+        <div class="feature-grid">
+            <div class="feature-item">
+                <h3>Weapon Training</h3>
+                <p>Learn to use pistols, bows, and grenades effectively in battle.</p>
+                <div class="image-container">
+                    <!-- Chú thích: Hình ảnh minh họa về huấn luyện sử dụng vũ khí -->
+                    <img src="images/weapon-training.jpg" alt="Weapon Training">
+                </div>
+            </div>
+            <div class="feature-item">
+                <h3>Combat Scenarios</h3>
+                <p>Engage in realistic combat scenarios to sharpen your skills.</p>
+                <div class="image-container">
+                    <!-- Chú thích: Hình ảnh minh họa các kịch bản chiến đấu thực tế -->
+                    <img src="images/combat-scenarios.jpg" alt="Combat Scenarios">
+                </div>
+            </div>
+            <div class="feature-item">
+                <h3>Target Practice</h3>
+                <p>Improve accuracy with moving and static targets.</p>
+                <div class="image-container">
+                    <!-- Chú thích: Hình ảnh về bài tập bắn mục tiêu -->
+                    <img src="images/combat-scenarios.jpg" alt="Target Practice">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Multiplayer Features Section -->
+    <section id="multiplayer" class="section">
+        <h2>Multiplayer Features</h2>
+        <p>Enjoy competitive multiplayer modes with advanced VR integration.</p>
+        <div class="feature-grid">
+            <div class="feature-item">
+                <h3>Free-for-All Mode</h3>
+                <p>Challenge up to 20 players in a fast-paced battle arena.</p>
+                <div class="image-container">
+                    <!-- Chú thích: Hình ảnh minh họa chế độ Free-for-All -->
+                    <img src="images/ffaImage-fotor-2024120293348.png" alt="Free-for-All Mode">
+                </div>
+            </div>
+            <div class="feature-item">
+                <h3>Boss Battles</h3>
+                <p>Team up with friends to defeat powerful bosses with unique abilities.</p>
+                <div class="image-container">
+                    <!-- Chú thích: Hình ảnh minh họa chế độ Boss Battles -->
+                    <img src="images/bossImage3-fotor-2024120291735.png" alt="Boss Battles">
+                </div>
+            </div>
+            <div class="feature-item">
+                <h3>Matchmaking</h3>
+                <p>Find matches quickly with our advanced matchmaking system.</p>
+                <div class="image-container">
+                    <!-- Chú thích: Hình ảnh minh họa hệ thống Matchmaking -->
+                    <img src="images/UI3-fotor-2024120283438.png" alt="Matchmaking">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Support Section -->
+    <section id="support" class="section">
+        <h2>Support</h2>
+        <p>Need help? Contact us or explore our detailed guides to get started.</p>
+        <div class="feature-grid">
+            <div class="feature-item">
+                <h3>Documentation</h3>
+                <p>Comprehensive guides to help you get started.</p>
+                <div class="image-container">
+                    <!-- Chú thích: Hình ảnh minh họa về tài liệu hướng dẫn -->
+                    <img src="images/com.oculus.vrshell-20241201-144117.jpg" alt="Documentation">
+                </div>
+            </div>
+            <div class="feature-item">
+                <h3>Community Support</h3>
+                <p>Join our forums and connect with other players.</p>
+                <div class="image-container">
+                    <!-- Chú thích: Hình ảnh về hỗ trợ từ cộng đồng -->
+                    <img src="images/Virtual_Battlefield_Logo_512 512.png" alt="Community Support">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Virtual Battlefield. All Rights Reserved.</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
