--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>Experience the thrill of an immersive multiplayer VR shooting game. Designed to engage and entertain, Virtual Battlefield is the future of VR gaming.</p>
         <div class="image-container">
             <!-- Chú thích: Đây là hình tổng quan về game, lấy từ nội dung trong chương 4 -->
-            <img src="images/square3-fotor-2024120274831.png" alt="Game Overview">
+            <img src="images/lanscapeWeb_fixed.png" alt="Game Overview">
         </div>
     </section>
 
@@ -35,19 +35,19 @@
         <p>The training mode helps players master the game mechanics, weapons, and combat strategies in a controlled environment.</p>
         <div class="feature-grid">
             <div class="feature-item">
-                <h3>Weapon Training</h3>
-                <p>Learn to use pistols, bows, and grenades effectively in battle.</p>
+                <h3>Training Mission System</h3>
+                <p>The instructor will assign tasks for you to complete as part of the training.</p>
                 <div class="image-container">
                     <!-- Chú thích: Hình ảnh minh họa về huấn luyện sử dụng vũ khí -->
                     <img src="images/weapon-training.jpg" alt="Weapon Training">
                 </div>
             </div>
             <div class="feature-item">
-                <h3>Combat Scenarios</h3>
-                <p>Engage in realistic combat scenarios to sharpen your skills.</p>
+                <h3>Weapon Training</h3>
+                <p>Learn to use pistols, bows, and cards effectively in battle.</p>
                 <div class="image-container">
                     <!-- Chú thích: Hình ảnh minh họa các kịch bản chiến đấu thực tế -->
-                    <img src="images/combat-scenarios.jpg" alt="Combat Scenarios">
+                    <img src="images/tm3.jpg" alt="Combat Scenarios">
                 </div>
             </div>
             <div class="feature-item">
@@ -83,8 +83,8 @@
                 </div>
             </div>
             <div class="feature-item">
-                <h3>Matchmaking</h3>
-                <p>Find matches quickly with our advanced matchmaking system.</p>
+                <h3>Utility Features</h3>
+                <p>There are many types of features, such as the Store, Friends, and Inventory</p>
                 <div class="image-container">
                     <!-- Chú thích: Hình ảnh minh họa hệ thống Matchmaking -->
                     <img src="images/UI3-fotor-2024120283438.png" alt="Matchmaking">
@@ -94,28 +94,25 @@
     </section>
 
     <!-- Support Section -->
-    <section id="support" class="section">
-        <h2>Support</h2>
-        <p>Need help? Contact us or explore our detailed guides to get started.</p>
-        <div class="feature-grid">
-            <div class="feature-item">
-                <h3>Documentation</h3>
-                <p>Comprehensive guides to help you get started.</p>
-                <div class="image-container">
-                    <!-- Chú thích: Hình ảnh minh họa về tài liệu hướng dẫn -->
-                    <img src="images/com.oculus.vrshell-20241201-144117.jpg" alt="Documentation">
-                </div>
-            </div>
-            <div class="feature-item">
-                <h3>Community Support</h3>
-                <p>Join our forums and connect with other players.</p>
-                <div class="image-container">
-                    <!-- Chú thích: Hình ảnh về hỗ trợ từ cộng đồng -->
-                    <img src="images/Virtual_Battlefield_Logo_512 512.png" alt="Community Support">
-                </div>
-            </div>
+<section id="support" class="section">
+    <h2>Support</h2>
+    <p>Need help? Contact us through the following channels:</p>
+    <div class="support-container">
+        <!-- Discord Contact -->
+        <div class="support-item">
+            <img src="images/discordlogo.jpeg" alt="Discord Logo" class="support-logo">
+            <span>
+                Discord: <a href="https://discord.gg/NCc5hnyCEP" target="_blank">https://discord.gg/8jtcDVG4</a>
+            </span>
         </div>
-    </section>
+        
+       <!-- Email Contact -->
+<div class="support-item">
+    <img src="images/emaillogo.jpeg" alt="Email Logo" class="support-logo">
+    <span>Email: lijiafu102@gmail.com</span>
+</div>
+    </div>
+</section>
 
     <footer>
         <p>&copy; 2024 Virtual Battlefield. All Rights Reserved.</p>
