--- a/index.html
+++ b/index.html
@@ -24,8 +24,26 @@
         <h2>Welcome to Virtual Battlefield</h2>
         <p>Experience the thrill of an immersive multiplayer VR shooting game. Designed to engage and entertain, Virtual Battlefield is the future of VR gaming.</p>
         <div class="image-container">
-            <!-- Chú thích: Đây là hình tổng quan về game, lấy từ nội dung trong chương 4 -->
             <img src="images/lanscapeWeb_fixed.png" alt="Game Overview">
+        </div>
+        
+        <!-- Video về tính năng game -->
+        <div class="video-container">
+            <h3>Gameplay Overview</h3>
+            <iframe width="100%" height="450" 
+                src="https://www.youtube.com/embed/tyVcIqhtKlk" 
+                title="Virtual Battlefield Features" frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+            </iframe>
+        </div>
+
+        <!-- Link đến Meta Store -->
+        <div class="meta-store-link">
+            <p>Explore more and download on Meta Store:</p>
+            <a href="https://www.meta.com/zh-tw/experiences/virtual-battlefield/9334234653253777/" target="_blank">
+                Visit Virtual Battlefield on Meta Store
+            </a>
         </div>
     </section>
 
@@ -38,7 +56,6 @@
                 <h3>Training Mission System</h3>
                 <p>The instructor will assign tasks for you to complete as part of the training.</p>
                 <div class="image-container">
-                    <!-- Chú thích: Hình ảnh minh họa về huấn luyện sử dụng vũ khí -->
                     <img src="images/weapon-training.jpg" alt="Weapon Training">
                 </div>
             </div>
@@ -46,7 +63,6 @@
                 <h3>Weapon Training</h3>
                 <p>Learn to use pistols, bows, and cards effectively in battle.</p>
                 <div class="image-container">
-                    <!-- Chú thích: Hình ảnh minh họa các kịch bản chiến đấu thực tế -->
                     <img src="images/tm3.jpg" alt="Combat Scenarios">
                 </div>
             </div>
@@ -54,7 +70,6 @@
                 <h3>Target Practice</h3>
                 <p>Improve accuracy with moving and static targets.</p>
                 <div class="image-container">
-                    <!-- Chú thích: Hình ảnh về bài tập bắn mục tiêu -->
                     <img src="images/combat-scenarios.jpg" alt="Target Practice">
                 </div>
             </div>
@@ -70,7 +85,6 @@
                 <h3>Free-for-All Mode</h3>
                 <p>Challenge up to 20 players in a fast-paced battle arena.</p>
                 <div class="image-container">
-                    <!-- Chú thích: Hình ảnh minh họa chế độ Free-for-All -->
                     <img src="images/ffaImage-fotor-2024120293348.png" alt="Free-for-All Mode">
                 </div>
             </div>
@@ -78,7 +92,6 @@
                 <h3>Boss Battles</h3>
                 <p>Team up with friends to defeat powerful bosses with unique abilities.</p>
                 <div class="image-container">
-                    <!-- Chú thích: Hình ảnh minh họa chế độ Boss Battles -->
                     <img src="images/bossImage3-fotor-2024120291735.png" alt="Boss Battles">
                 </div>
             </div>
@@ -86,7 +99,6 @@
                 <h3>Utility Features</h3>
                 <p>There are many types of features, such as the Store, Friends, and Inventory</p>
                 <div class="image-container">
-                    <!-- Chú thích: Hình ảnh minh họa hệ thống Matchmaking -->
                     <img src="images/UI3-fotor-2024120283438.png" alt="Matchmaking">
                 </div>
             </div>
@@ -94,29 +106,25 @@
     </section>
 
     <!-- Support Section -->
-<section id="support" class="section">
-    <h2>Support</h2>
-    <p>Need help? Contact us through the following channels:</p>
-    <div class="support-container">
-        <!-- Discord Contact -->
-        <div class="support-item">
-            <img src="images/discordlogo.jpeg" alt="Discord Logo" class="support-logo">
-            <span>
-                Discord: <a href="https://discord.gg/NCc5hnyCEP" target="_blank">https://discord.gg/8jtcDVG4</a>
-            </span>
+    <section id="support" class="section">
+        <h2>Support</h2>
+        <p>Need help? Contact us through the following channels:</p>
+        <div class="support-container">
+            <div class="support-item">
+                <img src="images/discordlogo.jpeg" alt="Discord Logo" class="support-logo">
+                <span>
+                    Discord: <a href="https://discord.gg/NCc5hnyCEP" target="_blank">https://discord.gg/8jtcDVG4</a>
+                </span>
+            </div>
+            <div class="support-item">
+                <img src="images/emaillogo.jpeg" alt="Email Logo" class="support-logo">
+                <span>Email: lijiafu201@gmail.com</span>
+            </div>
         </div>
-        
-       <!-- Email Contact -->
-<div class="support-item">
-    <img src="images/emaillogo.jpeg" alt="Email Logo" class="support-logo">
-    <span>Email: lijiafu201@gmail.com</span>
-</div>
-    </div>
-</section>
+    </section>
 
     <footer>
         <p>&copy; 2024 Virtual Battlefield. All Rights Reserved.</p>
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
